feat: verifyAccessToken middleware and retrieve new access token endpoint
