# src/routes/user.route.ts
@@ -1,11 +1,12 @@
 import express from 'express'
 
-import { login, verifyOTP } from '../controllers/user.controller'
+import { login, retrieveAccessToken, verifyOTP } from '../controllers/user.controller'
 import { logMiddleware } from '../middlewares/log.middleware'
 
 const userRouter = express.Router()
 
 userRouter.post('/login', logMiddleware, login)
 userRouter.post('/verify-otp', logMiddleware, verifyOTP)
+userRouter.get('/access-token', logMiddleware, retrieveAccessToken)
 
 export default userRouter
